# Azrael

./: .gitignore
firmware/: .cproject  CMakeLists.txt
firmware/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  azrael_freeRTOS.elf  azrael_freeRTOS.map  build.ninja  cmake_install.cmake  compile_commands.json  test.map
firmware/Debug/.cache/clangd/index/: FreeRTOS.h.17F01CD246A094F8.idx  FreeRTOSConfig.h.98C4B10FCC05721A.idx  cmsis_compiler.h.6FA17B60F3CC0E04.idx  cmsis_gcc.h.3AE1654C33CAE984.idx  cmsis_version.h.55A5265DEE842416.idx  core_cm3.h.3E09D15EAA9254D9.idx  deprecated_definitions.h.084B9C2CF4C32435.idx  display.c.C5890F469796DC26.idx  display.h.CB197C6FC13D3D38.idx  event_groups.c.A80FE30A7E961AC8.idx  event_groups.h.359692FE9AD65D65.idx  fonts.c.C427D48FCA09036D.idx  fonts.h.164756A4BBDF1593.idx  gpio.c.7A20C853D21422A7.idx  gpio.h.5ABCF23FCB4EAD82.idx  heap_4.c.A2888EF93DBC5AAC.idx  list.c.638AB47C8032DE86.idx  list.h.736391E5491D55F5.idx  main.c.CD6EB8BBCAC2544A.idx  main.h.FA8B12719683FE29.idx  mpu_wrappers.h.1B8C3B7BABAB4058.idx  newlib-freertos.h.2DC0CC81051099CA.idx  port.c.1BDADC12508042AE.idx  portable.h.854DEC3F0B37A86E.idx  portmacro.h.C0D325DBE6D2691D.idx  projdefs.h.13E71075619ABA5A.idx  queue.c.C001473B16E89885.idx  queue.h.19EF246D1BF939D7.idx  semphr.h.495CE6D4C75BDA87.idx  spi.c.54746C10857E94C9.idx  spi.h.253D8BB2C150C98A.idx  st7735.c.EA41D3D961FD4672.idx  st7735.h.3768CDA7158BEAE9.idx  stack_macros.h.F0326575EDF333FE.idx  startup_stm32f103c8tx.s.A0C936BD1F50B04B.idx  stm32f103xb.h.7C9168203613C447.idx  stm32f1xx.h.57B87491E1D85025.idx  stream_buffer.c.8F4B070716569F5A.idx  stream_buffer.h.8DA2327ECE665879.idx  syscalls.c.B3447BBD821095B5.idx  (+6 more)
firmware/Debug/.cmake/api/v1/reply/: cache-v2-abbaa879c5469fa532ec.json  cmakeFiles-v1-1447f05a85c924887ae4.json  codemodel-v2-5453f4af6a247ed32e48.json  index-2026-05-28T19-08-30-0727.json  target-azrael_freeRTOS-Debug-9ee3033ed3a4ea98a849.json  toolchains-v1-4cdca1502c83cf86aeb9.json
firmware/Inc/: FreeRTOSConfig.h  gpio.h  main.h
firmware/Sources/: display.c  gpio.c  main.c
firmware/azrael_freertos/: .project  CMakeLists.txt
firmware/azrael_freertos/Drivers/LIS3DH/: lis3dh.c  lis3dh.h
firmware/azrael_freertos/Drivers/ST7735/st7735/: st7735.c  st7735.h
firmware/azrael_freertos/Games/airRace/: airRace.c  airRace.h
firmware/azrael_freertos/Games/airRace/media/: assets.c  assets.h
firmware/azrael_freertos/Games/airRace/media/files/: 1.txt  image-to-mem-1.py  image-to-mem.py
firmware/azrael_freertos/Inc/: FreeRTOSConfig.h  display.h  i2c.h  main.h  spi.h
firmware/azrael_freertos/Sources/: gpio.c  i2c.c  main.c  spi.c
hardware/: .~lock.azrael.csv#  azrael-top-pos.ods  azrael-top-pos.xlsx  azrael.csv  azrael.kicad_pcb  azrael.kicad_prl  azrael.kicad_pro  azrael.kicad_sch  azrael.kicad_sch-bak  azrael.xml  fp-info-cache  fp-lib-table  report.txt  sym-lib-table  ~azrael.kicad_sch.lck
hardware/fab-outs/: .~lock.azrael-all-pos.csv#  .~lock.azrael.csv#  azrael-B_Cu.gbr  azrael-B_Mask.gbr  azrael-B_Paste.gbr  azrael-B_Silkscreen.gbr  azrael-Edge_Cuts.gbr  azrael-F_Cu.gbr  azrael-F_Mask.gbr  azrael-F_Paste.gbr  azrael-F_Silkscreen.gbr  azrael-NPTH.drl  azrael-PTH.drl  azrael-all-pos.csv  azrael-job.gbrjob  azrael.csv  azrael.drl
